# REC-CS23221

./: .gitignore  README.md  pyproject.toml  ruff.toml
Week-1/: COD_1_Swapping.py  COD_2_Complex Number Parsing.py  COD_3_Allowance Calculation with Base and Per-Task Rate.py  CY_1_Complex Number Real–Imaginary Swap.py  CY_2_Delivery Cost Calculation.py  CY_3_Bitwise XOR Encoding.py  PAH_1_Float-to-Integer Conversion.py  PAH_2_Compound Interest with Monthly Contributions.py  PAH_3_Bitwise Left Shift and Target Sum Verification.py
Week-2.1/: COD 5_Even–Odd Classification Using Loop.py  COD_1_Triangle Type Classification.py  COD_2_Conditional Bonus and Net Salary Calculation.py  COD_3_Conditional Discount Calculation.py  COD_4_Total Cost with Conditional Percentage Discount.py  CY 2_Slab-Based Electricity Bill Calculation with Surcharge.py  CY 3_Temperature-Based Weather Classification.py  CY 4_Integer to Roman Numeral Conversion.py  CY 5_Birthdate-Based Zodiac Sign Determination.py  CY_1_Day-Based Doctor Schedule Mapping.py  PAH 1_Body Fat Percentage Calculation and Classification.py  PAH 4_Temperature Sign Classification.py  PAH 5_Score-Based Grade Classification.py  PAH_2_Input Validation and Conditional Calculator Operations.py  PAH_3_Maximum, Average, and Sum Calculation.py
Week-2.2/: COD 1_Diamond Star Pattern Using Nested Loops.py  COD 2_Prime Numbers Generation Within Range.py  COD 3_Floyd’s Triangle Pattern Generation.py  COD 4_Half Pyramid Number Pattern Generation.py  COD 5_Factorial and Factorial Digit Sum Calculation.py  CY 2_Pascal’s Triangle Generation.py  (+9 more)
(+75 files in other folders)
